Começo da estilização

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	    		<a class="nav-link" href="#">Lead</a>
 	  		</li>
 
-		  	<li class="nav-item">
+		  	<li class="nav-logout">
 		    	<a class="nav-link" href="#">Logout</a>
 		 	</li>
 		</ul>
