--- a/login.html
+++ b/login.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-<div class="mt-5 pt-5 align="center">
-	<div>
+<div class="mt-5 pt-5 login">
+	<div class="logo">
 		<img src="img/logo.png">
 	</div>
 
-	<div>
+	<div class="form">
 		<form>
 			<div class="form-group">
 				<label for="exampleInputEmail1">Login</label>
@@ -23,7 +23,9 @@
 				 <label for="exampleInputPassword1">Senha</label>
 				 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
 			</div>
-			<button type="submit" class="btn btn-primary">Entrar</button>
+			<div class="btn-entrar">
+				<button type="submit" class="btn btn-primary-01">Entrar</button>
+			</div>
 			</form>
 	</div>
 </div>
